--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "server": "node index.js",
     "prod": "node index.js"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
